--- a/Views/Course/List.cshtml
+++ b/Views/Course/List.cshtml
@@ -5,6 +5,6 @@
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 </head>
 <body>
-    <h1> Home Privacy Page</h1>
+    <h1> Course List Page</h1>
 </body>
 </html>
