--- a/Views/Course/List.cshtml
+++ b/Views/Course/List.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@model List<Course>
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <title></title>
@@ -6,5 +8,15 @@
 </head>
 <body>
     <h1> Course List Page</h1>
+
+    @foreach (var course in Model)
+    {
+        <div id="kurs_@course.Id">
+
+            <h2>Course Name: @course.Title</h2>
+            <p>Desription: @course.Description</p>
+
+        </div>
+    }
 </body>
 </html>
