--- a/Views/Course/List.cshtml
+++ b/Views/Course/List.cshtml
@@ -15,6 +15,7 @@
 
             <h2>Course Name: @course.Title</h2>
             <p>Desription: @course.Description</p>
+            <img src="~/img/@course.Image" width="200"/>
 
         </div>
     }
