--- a/Views/Course/List.cshtml
+++ b/Views/Course/List.cshtml
@@ -5,19 +5,51 @@
 <head>
     <title></title>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+
 </head>
 <body>
-    <h1> Course List Page</h1>
+    <header>
+        <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
+            <div class="container">
+                <a class="navbar-brand" href="#"> CoursePage</a>
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Courses</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <div class="container pb-3">
+        <main>
+            <h1> Course List Page</h1>
+            @foreach (var course in Model)
+            {
+                <div class="card mt-3" id="kurs_@course.Id">
+                    <div class="row">
+                       <div class="col-md-4">
+                           <img src="~/img/@course.Image" class ="img-fluid rounded-start" width="200" alt=""/>
+                       </div>
+                       <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title"> @course.Title</h5>
+                                <p class="card-text"> @course.Description</p>
+                            </div> 
+                       </div>
+                    </div>
+                </div>
+            }
+        </main>
 
-    @foreach (var course in Model)
-    {
-        <div id="kurs_@course.Id">
+    </div>
 
-            <h2>Course Name: @course.Title</h2>
-            <p>Desription: @course.Description</p>
-            <img src="~/img/@course.Image" width="200"/>
 
-        </div>
-    }
+    
+
+  
 </body>
 </html>
