--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -1,10 +1,1 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title></title>
-    <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-</head>
-<body>
-    <h1> Home Privacy Page</h1>
-</body>
-</html>
+﻿<h1> Home Privacy Page</h1>
