--- a/Views/Course/Index.cshtml
+++ b/Views/Course/Index.cshtml
@@ -1,16 +1,5 @@
 ﻿@model Course
 
 <h1>Course Index Page</h1>
-<div class="card mt-3" id="kurs_@Model.Id">
-    <div class="row">
-        <div class="col-md-4">
-            <img src="~/img/@Model.Image" class="img-fluid rounded-start" width="200" alt="" />
-        </div>
-        <div class="col-md-8">
-            <div class="card-body">
-                <h5 class="card-title"> @Model.Title</h5>
-                <p class="card-text"> @Model.Description</p>
-            </div>
-        </div>
-    </div>
-</div>
+
+@await Html.PartialAsync("_CourseCard")
