--- a/Views/Course/List.cshtml
+++ b/Views/Course/List.cshtml
@@ -3,17 +3,5 @@
 <h1> Course List Page</h1>
 @foreach (var course in Model)
 {
-    <div class="card mt-3" id="kurs_@course.Id">
-        <div class="row">
-            <div class="col-md-4">
-                <img src="~/img/@course.Image" class="img-fluid rounded-start" width="200" alt="" />
-            </div>
-            <div class="col-md-8">
-                <div class="card-body">
-                    <h5 class="card-title"> @course.Title</h5>
-                    <p class="card-text"> @course.Description</p>
-                </div>
-            </div>
-        </div>
-    </div>
+   @await Html.PartialAsync("_CourseCard", course)
 }
