--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,26 +3,16 @@
 <head>
     <title></title>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+    <!-- Link to Bootstrap CSS -->
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
-            <div class="container">
-                <a class="navbar-brand" href="#"> CoursePage</a>
-                <ul class="navbar-nav me-auto">
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Courses</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+       @await Html.PartialAsync("_Navbar");
     </header>
     <div class="container mt-3">
         <main>
+            <!-- Render the body of the page -->
             @RenderBody()
         </main>
 
