--- a/Views/Shared/_Navbar.cshtml
+++ b/Views/Shared/_Navbar.cshtml
@@ -1,13 +1,13 @@
 ﻿ <!-- Navigation bar -->
 <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
     <div class="container">
-        <a class="navbar-brand" href="#"> CoursePage</a>
+        <a class="navbar-brand" asp-controller="Home" asp-action="Index" > CoursePage</a>
         <ul class="navbar-nav me-auto">
             <li class="nav-item">
-                <a href="#" class="nav-link">Home</a>
+                <a asp-controller="Home" asp-action="Index" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link">Courses</a>
+                <a asp-controller="Course" asp-action="List" class="nav-link">Courses</a>
             </li>
         </ul>
     </div>
